objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Discard_Reason__c</fullName>
        <label>Discard Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Changes happening at the organization</fullName>
                </value>
                <value>
                    <fullName>Competitor Seeking Information</fullName>
                </value>
                <value>
                    <fullName>Contact no longer with organization</fullName>
                </value>
                <value>
                    <fullName>Dislike Product</fullName>
                </value>
                <value>
                    <fullName>Do Not Call</fullName>
                </value>
                <value>
                    <fullName>Duplicate Lead/Technical Error</fullName>
                </value>
                <value>
                    <fullName>Interested but not the right time</fullName>
                </value>
                <value>
                    <fullName>Invalid Contact Information</fullName>
                </value>
                <value>
                    <fullName>Invalid – Non Sales Inquiry</fullName>
                </value>
                <value>
                    <fullName>Mass Discard</fullName>
                </value>
                <value>
                    <fullName>Max Contact Attempts Reached</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Out of Business / Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Previous Issue with TR</fullName>
                </value>
                <value>
                    <fullName>Recent TR purchase</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Subscribes to Product of Interest</fullName>
                </value>
                <value>
                    <fullName>Trial Abuser</fullName>
                </value>
                <value>
                    <fullName>Using a competitor</fullName>
                </value>
                <value>
                    <fullName>Value for the Price / No Budget</fullName>
                </value>
                <value>
                    <fullName>Wrong product fit</fullName>
                </value>
                <value>
                    <fullName>Wrong Segment / Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disqualification_Justification__c</fullName>
        <description>This field is used to provided more detailed reason as to why lead was disqualified to better assist marketing and data quality efforts</description>
        <inlineHelpText>This field is used to provided more detailed reason as to why lead was disqualified to better assist marketing and data quality efforts</inlineHelpText>
        <label>DQ Justification</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TRWayLeadMgmt__Panorama_DQ_Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Consultant/Locum Lawyer</fullName>
                </value>
                <value>
                    <fullName>Contact no longer with Org</fullName>
                </value>
                <value>
                    <fullName>Insufficient Information</fullName>
                </value>
                <value>
                    <fullName>Invalid Account Data</fullName>
                </value>
                <value>
                    <fullName>Invalid Email</fullName>
                </value>
                <value>
                    <fullName>Invalid Phone</fullName>
                </value>
                <value>
                    <fullName>Organization Changes at Account</fullName>
                </value>
                <value>
                    <fullName>Out of Business/Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Trial Abuser</fullName>
                </value>
                <value>
                    <fullName>Unsuited</fullName>
                </value>
                <value>
                    <fullName>Price Considerations</fullName>
                    <isActive>false</isActive>
                    <label>Price Considerations</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_call_Contact__c</fullName>
        <description>pulled from contact</description>
        <formula>Contact__r.DoNotCall</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_mail_account__c</fullName>
        <description>pulled form account</description>
        <formula>Account__r.Do_Not_Mail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do Not Mail (Account)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_not_Email__c</fullName>
        <description>Contact - Do Not Email</description>
        <formula>Contact__r.HasOptedOutOfEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email - Global Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_not_call_Account__c</fullName>
        <description>pulling from account</description>
        <formula>Account__r.Do_Not_Call__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do Not Call (Account)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_not_mail_Contact__c</fullName>
        <description>pulled from contact</description>
        <formula>Contact__r.Do_not_Mail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_not_pay_a_visit_Account__c</fullName>
        <description>pulled from account</description>
        <formula>Account__r.Do_Not_Pay_a_Visit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do Not Pay a Visit (Account)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_not_pay_a_visit_Contact__c</fullName>
        <formula>Contact__r.Do_Not_Pay_a_Visit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do Not Pay a Visit (Contact)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECC_Annual_Revenue__c</fullName>
        <inlineHelpText>The Annual Revenue entered here is meant to cover the whole organisation.</inlineHelpText>
        <label>Annual Revenue</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ECC_Top_Named_Corporations__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>ECC_Annual_Revenue</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ECC_Government_Type__c</fullName>
        <label>Government Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BU_Segment__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>ECC_Government_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ECC_Number_Of_Employees__c</fullName>
        <inlineHelpText>The Number of Employees entered here is meant to cover the whole organisation.</inlineHelpText>
        <label>Number Of Employees</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BU_Segment__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>ECC_Number_Of_Employees</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ECC_Number_of_Attorneys__c</fullName>
        <inlineHelpText>The Number of Attorneys entered here is meant to cover the whole organisation.</inlineHelpText>
        <label>Number of Attorneys</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ECC_Top_Named_Law_Firms__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>ECC_Number_of_Attorneys</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ECC_Segment_Level_2__c</fullName>
        <label>Frozen Market Current Year Segment L2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECC_Segment_Level_3__c</fullName>
        <label>Frozen Market Current Year Segment L3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECC_Top_Named_Corporations__c</fullName>
        <label>Top Named Corporations</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BU_Segment__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>ECC_Top_Named_Corporations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ECC_Top_Named_Law_Firms__c</fullName>
        <label>Top Named Law Firms</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BU_Segment__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>ECC_Top_Named_Law_Firms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERP_System__c</fullName>
        <description>Created as part of LOTUS, should be purposed for Lead Data. DPS-4512</description>
        <label>ERP System</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3D Cart</fullName>
                </value>
                <value>
                    <fullName>Acumatica</fullName>
                </value>
                <value>
                    <fullName>Amaricommerce</fullName>
                </value>
                <value>
                    <fullName>Amazon UK</fullName>
                </value>
                <value>
                    <fullName>Aptos (POS)</fullName>
                </value>
                <value>
                    <fullName>BigCommerce</fullName>
                </value>
                <value>
                    <fullName>Civica/Authority</fullName>
                </value>
                <value>
                    <fullName>CM2</fullName>
                </value>
                <value>
                    <fullName>Concur</fullName>
                    <isActive>false</isActive>
                    <label>Concur</label>
                </value>
                <value>
                    <fullName>Concur Invoice</fullName>
                </value>
                <value>
                    <fullName>Content Extract (POS)</fullName>
                </value>
                <value>
                    <fullName>Core Commerce</fullName>
                </value>
                <value>
                    <fullName>Coupa</fullName>
                </value>
                <value>
                    <fullName>Data File Integrator (DFI)</fullName>
                </value>
                <value>
                    <fullName>Distribution One by ERP One</fullName>
                </value>
                <value>
                    <fullName>DMSi</fullName>
                </value>
                <value>
                    <fullName>DST (AS400)</fullName>
                </value>
                <value>
                    <fullName>Dynamics AX</fullName>
                    <isActive>false</isActive>
                    <label>Dynamics AX</label>
                </value>
                <value>
                    <fullName>EFI CBS</fullName>
                </value>
                <value>
                    <fullName>EFI Monarch</fullName>
                </value>
                <value>
                    <fullName>EFI Pace</fullName>
                </value>
                <value>
                    <fullName>EFI Printsmithvision</fullName>
                </value>
                <value>
                    <fullName>EFI Radius</fullName>
                </value>
                <value>
                    <fullName>EFI Technique</fullName>
                </value>
                <value>
                    <fullName>Epicor</fullName>
                    <isActive>false</isActive>
                    <label>Epicor</label>
                </value>
                <value>
                    <fullName>Epicor CMS</fullName>
                </value>
                <value>
                    <fullName>Epicor ERP (V10)</fullName>
                </value>
                <value>
                    <fullName>Epicor iScala</fullName>
                </value>
                <value>
                    <fullName>Epicor P21</fullName>
                </value>
                <value>
                    <fullName>GEP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ET_Unique_Identifier__c</fullName>
        <description>DPS-22300 - Enterprise Trials - Lead Object - Create ET Unique Identifier field</description>
        <externalId>true</externalId>
        <label>ET Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Eloqua_source__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eloqua source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Contact_Preferred__c</fullName>
        <description>Email Contact Preferred from contact</description>
        <formula>Contact__r.Email_Contact_Preferred__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Contact Preferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Embargo_Check__c</fullName>
        <formula>OR(AND(CONTAINS($Setup.LOTUS_Denied_Countries_And_Cities__c.Country_Name__c,Billing_Country__c),NOT(ISBLANK(Billing_Country__c))),AND(CONTAINS($Setup.LOTUS_Denied_Countries_And_Cities__c.Cities_Name1__c, Billing_City__c ),NOT(ISBLANK(Billing_City__c))),AND(CONTAINS($Setup.LOTUS_Denied_Countries_And_Cities__c.Cities_Name2__c, Billing_City__c ),NOT(ISBLANK(Billing_City__c))),AND(CONTAINS($Setup.LOTUS_Denied_Countries_And_Cities__c.Cities_Name3__c, Billing_City__c ),NOT(ISBLANK(Billing_City__c))))</formula>
        <label>Embargo Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Contact_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Contact ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Trial_Account_ID__c</fullName>
        <label>External Trial Account ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Trial_Contact_ID__c</fullName>
        <label>External Trial Contact ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_opt_out_Contact__c</fullName>
        <formula>Contact__r.HasOptedOutOfFax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax opt out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fed_Pubs_Territory__c</fullName>
        <label>Fed Pubs Territory</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Sales_Territory__c</fullName>
        <label>Field Sales Territory</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FindLaw_AM_Territory__c</fullName>
        <label>FindLaw AM Territory</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FindLaw_Account_Info_Email_Opt_Out__c</fullName>
        <description>from contact</description>
        <formula>Contact__r.FindLaw_Account_Info_Email_Opt_Out__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FindLaw Account Info Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FindLaw_CDA_Territory__c</fullName>
        <label>FindLaw CDA Territory</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FindLaw_Product_Info_Email_Opt_Out__c</fullName>
        <description>from contact</description>
        <formula>Contact__r.FindLaw_Product_Alerts_Email_Opt_Out__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FindLaw Product Info Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FindLaw_Resources_Info_Email_Opt_Out__c</fullName>
        <description>from contact</description>
        <formula>Contact__r.FindLaw_Resources_Email_Opt_Out__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FindLaw Resources Info Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FindLaw_Sales_Territory__c</fullName>
        <label>FindLaw Sales Territory</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Size__c</fullName>
        <description>Only editable by the ANZ Eloqua User</description>
        <label>Firm Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Employees: 1-50</fullName>
                </value>
                <value>
                    <fullName>Employees: 500+</fullName>
                </value>
                <value>
                    <fullName>Employees: 51-100</fullName>
                </value>
                <value>
                    <fullName>Partner:1</fullName>
                </value>
                <value>
                    <fullName>Partner:11-50</fullName>
                </value>
                <value>
                    <fullName>Partner:2</fullName>
                </value>
                <value>
                    <fullName>Partner:3-10</fullName>
                </value>
                <value>
                    <fullName>Partner:50+</fullName>
                </value>
                <value>
                    <fullName>Sole Practitioner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_Organization_Type__c</fullName>
        <description>Field added as part of MCL-1486 Oct 2016 Release</description>
        <label>Form Organization Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLI_Elite_Account_Type__c</fullName>
        <formula>TEXT(Account__r.Elite_Account_Type__c)</formula>
        <label>Elite Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLI_Rep_Type__c</fullName>
        <description>Created as part of CRM-17848</description>
        <label>Rep Type</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <label>GUID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Level_Customer_Type__c</fullName>
        <description>Identifies the customer based upon entity type</description>
        <inlineHelpText>Identifies the customer based upon entity type</inlineHelpText>
        <label>High Level Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SLF</fullName>
                </value>
                <value>
                    <fullName>MLF</fullName>
                </value>
                <value>
                    <fullName>LLF</fullName>
                </value>
                <value>
                    <fullName>CORP</fullName>
                </value>
                <value>
                    <fullName>GOV</fullName>
                </value>
                <value>
                    <fullName>ACADEMIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImpartnerPRM__DateAssignedToPartner__c</fullName>
        <label>Date Assigned to Partner</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ImpartnerPRM__DealRegistrationDenied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deal Registration Denied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImpartnerPRM__DealRegistrationStatus__c</fullName>
        <formula>IF(ImpartnerPRM__IsDealRegistration__c, IF(IsConverted, &quot;Approved&quot;, IF(ImpartnerPRM__DealRegistrationDenied__c, &quot;Denied&quot;, &quot;Pending&quot;)), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Registration Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImpartnerPRM__IsDealRegistration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deal Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImpartnerPRM__NotifyPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImpartnerPRM__PartnerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ImpartnerPRM__PartnerContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.ImpartnerPRM__PartnerAccount__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.ImpartnerPRM__PartnerAccount__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ImpartnerPRM__PartnerLastModifiedDate__c</fullName>
        <label>Partner Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ImpartnerPRM__PartnerLeadAcceptance__c</fullName>
        <label>Partner Lead Acceptance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_LatAm__c</fullName>
        <label>Industry LatAm</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Customer_Group__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ASTILLEROS / PESQUERA / PORTUARIA</fullName>
                </value>
                <value>
                    <fullName>FG-LEGISLATIVE</fullName>
                </value>
                <value>
                    <fullName>EXECUTIVE POWER</fullName>
                </value>
                <value>
                    <fullName>JUDICIARY POWER</fullName>
                </value>
                <value>
                    <fullName>FG-ADMIN OFF</fullName>
                </value>
                <value>
                    <fullName>NAICS CODE 1111</fullName>
                </value>
                <value>
                    <fullName>NAICS CODE 1112</fullName>
                </value>
                <value>
                    <fullName>BANK</fullName>
                </value>
                <value>
                    <fullName>NAICS CODE 1113</fullName>
                </value>
                <value>
                    <fullName>FG-SEC &amp; EXCH COMM</fullName>
                </value>
                <value>
                    <fullName>NAICS CODE 1114</fullName>
                </value>
                <value>
                    <fullName>NAICS CODE 1119</fullName>
                </value>
                <value>
                    <fullName>NAICS CODE 1121</fullName>
                </value>
                <value>
                    <fullName>BU Invest &amp; Fin Serv</fullName>
                </value>
                <value>
                    <fullName>NAICS CODE 1122</fullName>
                </value>
                <value>
                    <fullName>FIRM-LAW</fullName>
                </value>
                <value>
                    <fullName>NOTARY</fullName>
                </value>
                <value>
                    <fullName>ED Student</fullName>
                </value>
                <value>
                    <fullName>ESTUDIOS CONTABLES /</fullName>
                </value>
                <value>
                    <fullName>BU ImportExport Agnt</fullName>
                </value>
                <value>
                    <fullName>LAW AND ACCT FIRM</fullName>
                </value>
                <value>
                    <fullName>PRV-OTHER</fullName>
                </value>
                <value>
                    <fullName>ASOCIACIONES CIVILES</fullName>
                </value>
                <value>
                    <fullName>CHAMBERS</fullName>
                </value>
                <value>
                    <fullName>COOPERATIVE</fullName>
                </value>
                <value>
                    <fullName>FOUNDATION</fullName>
                </value>
                <value>
                    <fullName>AS Empl &amp; Prof Assoc</fullName>
                </value>
                <value>
                    <fullName>AS Charity/NonProfit</fullName>
                </value>
                <value>
                    <fullName>NAICS CODE 1123</fullName>
                </value>
                <value>
                    <fullName>NAICS CODE 1124</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inside_Sales_Territory__c</fullName>
        <label>Inside Sales Territory</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invited_Date_Time__c</fullName>
        <label>Invited Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_GLI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created for LCRM project</description>
        <label>Is GLI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Lead_Convert__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is used to bypass validation rule present under contact in Lead conversion.</description>
        <label>Is Lead Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify Marketing attributed leads</description>
        <label>Is Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Trial_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Trial Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Web_To_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the lead in created through Web to Lead</description>
        <label>Is Web To Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Web_to_PPO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to identify if Lead is to be converted to PPO.</description>
        <label>Is Web to PPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Academic Administrator</fullName>
                </value>
                <value>
                    <fullName>Academic Faculty</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Advisor/Consultant</fullName>
                </value>
                <value>
                    <fullName>Arbitrator/Mediator</fullName>
                </value>
                <value>
                    <fullName>Associate</fullName>
                </value>
                <value>
                    <fullName>Attorney - Associate</fullName>
                    <label>Attorney/Associate</label>
                </value>
                <value>
                    <fullName>Attorney/Barrister/Solicitor</fullName>
                </value>
                <value>
                    <fullName>Attorney - Contract Atty</fullName>
                    <label>Attorney/Contract Atty</label>
                </value>
                <value>
                    <fullName>Attorney - Corporate Counsel</fullName>
                    <label>Attorney/Corporate Counsel</label>
                </value>
                <value>
                    <fullName>Attorney - Government</fullName>
                    <label>Attorney/Government</label>
                </value>
                <value>
                    <fullName>Attorney - Managing Partner</fullName>
                    <label>Attorney/Managing Partner</label>
                </value>
                <value>
                    <fullName>Attorney - Partner</fullName>
                    <label>Attorney/Partner</label>
                </value>
                <value>
                    <fullName>Attorney - Solo</fullName>
                    <label>Attorney/Solo</label>
                </value>
                <value>
                    <fullName>Auditor</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Business Development Professio</fullName>
                    <label>Business Dev Professional</label>
                </value>
                <value>
                    <fullName>Clerk</fullName>
                </value>
                <value>
                    <fullName>C-Level</fullName>
                </value>
                <value>
                    <fullName>C-Level/CCO</fullName>
                </value>
                <value>
                    <fullName>C-Level/CEO</fullName>
                </value>
                <value>
                    <fullName>C-Level/CFO</fullName>
                </value>
                <value>
                    <fullName>C-Level/CIO/CKO/CTO</fullName>
                </value>
                <value>
                    <fullName>C-Level/CMO</fullName>
                </value>
                <value>
                    <fullName>C-Level/COO/CAO</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Court Administration</fullName>
                    <label>COURT ADMINISTRATION</label>
                </value>
                <value>
                    <fullName>Director/VP/GM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>